# gtest_initial

./: README.md
test/: CMakeLists.txt  test.cpp
test/inc/: test.h
